src/OcctNative/OcctOcaf.h

    // Standard scalar, reference, collection and geometric attributes.
    OCCTBRIDGE_API int occt_ocaf_set_name(OcctOcafHandle handle, const char* entry, const char* utf8Value);
    OCCTBRIDGE_API int occt_ocaf_get_name(OcctOcafHandle handle, const char* entry, const char** utf8Value);
    OCCTBRIDGE_API int occt_ocaf_set_comment(OcctOcafHandle handle, const char* entry, const char* utf8Value);
    OCCTBRIDGE_API int occt_ocaf_get_comment(OcctOcafHandle handle, const char* entry, const char** utf8Value);
    OCCTBRIDGE_API int occt_ocaf_set_ascii_string(OcctOcafHandle handle, const char* entry, const char* utf8Value);
    OCCTBRIDGE_API int occt_ocaf_get_ascii_string(OcctOcafHandle handle, const char* entry, const char** utf8Value);
    OCCTBRIDGE_API int occt_ocaf_set_integer(OcctOcafHandle handle, const char* entry, int value);
    OCCTBRIDGE_API int occt_ocaf_get_integer(OcctOcafHandle handle, const char* entry, int* value);
    OCCTBRIDGE_API int occt_ocaf_set_real(OcctOcafHandle handle, const char* entry, double value);
    OCCTBRIDGE_API int occt_ocaf_get_real(OcctOcafHandle handle, const char* entry, double* value);
    OCCTBRIDGE_API int occt_ocaf_set_uattribute(OcctOcafHandle handle, const char* entry, const char* guid);
    OCCTBRIDGE_API int occt_ocaf_has_uattribute(OcctOcafHandle handle, const char* entry, const char* guid);
    OCCTBRIDGE_API int occt_ocaf_set_reference(OcctOcafHandle handle, const char* entry, const char* targetEntry);
    OCCTBRIDGE_API int occt_ocaf_get_reference(OcctOcafHandle handle, const char* entry, const char** targetEntry);
    OCCTBRIDGE_API int occt_ocaf_set_integer_array(OcctOcafHandle handle, const char* entry, const int* values, int count, int lower);
    OCCTBRIDGE_API int occt_ocaf_get_integer_array(OcctOcafHandle handle, const char* entry);
    OCCTBRIDGE_API int occt_ocaf_set_real_array(OcctOcafHandle handle, const char* entry, const double* values, int count, int lower);
    OCCTBRIDGE_API int occt_ocaf_get_real_array(OcctOcafHandle handle, const char* entry);
    OCCTBRIDGE_API int occt_ocaf_set_boolean_array(OcctOcafHandle handle, const char* entry, const int* values, int count, int lower);
    OCCTBRIDGE_API int occt_ocaf_get_boolean_array(OcctOcafHandle handle, const char* entry);
    OCCTBRIDGE_API int occt_ocaf_set_byte_array(OcctOcafHandle handle, const char* entry, const unsigned char* values, int count, int lower);
    OCCTBRIDGE_API int occt_ocaf_get_byte_array(OcctOcafHandle handle, const char* entry);
    OCCTBRIDGE_API int occt_ocaf_set_string_array(OcctOcafHandle handle, const char* entry, const char* const* utf8Values, int count, int lower);
    OCCTBRIDGE_API int occt_ocaf_get_string_array(OcctOcafHandle handle, const char* entry);
    OCCTBRIDGE_API int occt_ocaf_array_lower(OcctOcafHandle handle);
    OCCTBRIDGE_API int occt_ocaf_array_count(OcctOcafHandle handle);
    OCCTBRIDGE_API int occt_ocaf_array_int_at(OcctOcafHandle handle, int index);
    OCCTBRIDGE_API double occt_ocaf_array_real_at(OcctOcafHandle handle, int index);
    OCCTBRIDGE_API const char* occt_ocaf_array_string_at(OcctOcafHandle handle, int index);
    OCCTBRIDGE_API int occt_ocaf_set_position(OcctOcafHandle handle, const char* entry, OcctPoint3d point);
    OCCTBRIDGE_API int occt_ocaf_get_position(OcctOcafHandle handle, const char* entry, OcctPoint3d* point);
    OCCTBRIDGE_API int occt_ocaf_set_shape_attribute(OcctOcafHandle handle, OcctModelHandle model, const char* entry, OcctObjectId shapeId);
    OCCTBRIDGE_API OcctObjectId occt_ocaf_get_shape_attribute(OcctOcafHandle handle, OcctModelHandle model, const char* entry);